--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="row d-flex justify-content-between align-items-center container bg-light p-5 mx-auto g-4 ">
     <div class=" col-lg-8 col-md-6 container round  ">
 <div class="d-flex justify-content-start align-items-center">
-    <img src="/image/audiance.png" alt="">
+    <img src="./image/audiance.png" alt="">
 </div>
 <div class="row d-flex" >
 <h3>Global Climate Summit Yields Mixed Results
@@ -83,7 +83,7 @@ optimistic economic forecasts and strong corporate earnings.</p >
     <div class="  col-lg-4 col-md-6 px-5 py-5 d-flex row justify-content-end align-items-end round">
         <div class="row g-4 d-flex justify-content-end align-items-center ">
         <div>
-            <img src="/image/p.png" alt="">
+            <img src="./image/p.png" alt="">
             <span>
               Blockchain Beyond
             Cryptocurrency:
@@ -93,7 +93,7 @@ optimistic economic forecasts and strong corporate earnings.</p >
         </div>
         <div >
         <div>
-            <img src="/image/2.png" alt="">
+            <img src="./image/2.png" alt="">
         <span>
           
          <p >Stock Market Hits
@@ -105,7 +105,7 @@ optimistic economic forecasts and strong corporate earnings.</p >
 
         </div>
         <div>
-            <img src="/image/3.png" alt="">
+            <img src="./image/3.png" alt="">
              <span >
              <p > Health Innovations to
                Watch in 2024</p>
@@ -114,7 +114,7 @@ optimistic economic forecasts and strong corporate earnings.</p >
             
         </div>
         <div>
-            <img src="/image/4.png" alt="">
+            <img src="./image/4.png" alt="">
             <span >
              <p >New Regulations Put
             Tech Giants Under the
@@ -145,7 +145,7 @@ sustainable spaces.
 
     </div>
     <div class="col-lg-8 d-flex justify-content-center">
-      <img src="/image/A1.png" alt="">
+      <img src="./image/A1.png" alt="">
 
     </div>
 
@@ -175,20 +175,20 @@ sustainable spaces.
   </div>
   </div>
   <div class=" col-md-8 justify-content-end  " >
-    <img src="/image/5G Expansion_ What It Means for Consumers and Businesses.png" alt="5G Expansion_ What It Means for Consumers and Businesses">
+    <img src="./image/5G Expansion_ What It Means for Consumers and Businesses.png" alt="5G Expansion_ What It Means for Consumers and Businesses">
 
   </div>
 
   </div>
   <div class="container p-5 g-4 row d-flex    ">
     <div class="col-lg-4">
-      <img src="/image/sports.png" width="300px" alt="">
+      <img src="./image/sports.png" width="300px" alt="">
     </div>
     <div class="col-lg-4">
-      <img src="/image/relax.png" width="300px"  alt="">
+      <img src="./image/relax.png" width="300px"  alt="">
     </div>
     <div class="col-lg-4">
-      <img src="/image/music.png" width="300px" alt="">
+      <img src="./image/music.png" width="300px" alt="">
     <div>
 
     </div>
@@ -211,7 +211,7 @@ sustainable spaces.
         <a href="#" class="read-more">Read More &rarr;</a>
       </div>
       <div class="col-md-4">
-        <img src="/image/education.png" alt="Education" class="img-fluid rounded">
+        <img src="./image/education.png" alt="Education" class="img-fluid rounded">
       </div>
     </div>
 
@@ -223,7 +223,7 @@ sustainable spaces.
         <a href="#" class="read-more">Read More &rarr;</a>
       </div>
       <div class="col-md-4">
-        <img src="/image/Healthcare.png" alt="Healthcare" class="img-fluid rounded">
+        <img src="./image/Healthcare.png" alt="Healthcare" class="img-fluid rounded">
       </div>
     </div>
 
@@ -235,7 +235,7 @@ sustainable spaces.
         <a href="#" class="read-more">Read More &rarr;</a>
       </div>
       <div class="col-md-4">
-        <img src="/image/Remote Work.png" alt="Remote Work" class="img-fluid rounded">
+        <img src="./image/Remote Work.png" alt="Remote Work" class="img-fluid rounded">
       </div>
     </div>
 
@@ -286,9 +286,9 @@ sustainable spaces.
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor dfddfh</p>
 
         <div class="d-flex gap-3 mt-3">
-          <img src="/image/f1.png"  class="rounded" alt="img1">
-          <img src="/image/f2.png"  class="rounded" alt="img2">
-          <img src="/image/f3.png" class="rounded" alt="img3">
+          <img src="./image/f1.png"  class="rounded" alt="img1">
+          <img src="./image/f2.png"  class="rounded" alt="img2">
+          <img src="./image/f3.png" class="rounded" alt="img3">
         </div>
       </div>
 
